Fix mobile dropdown links overlapping

--- a/styles.css
+++ b/styles.css
@@ -251,37 +251,25 @@ button:hover {
         height: 50px;
     }
 
-    .sidebar__links-a,
-    .sidebar__links-b,
-    .sidebar__links-a img,
-    .sidebar__links-b img,
+    .sidebar__links,
+    .sidebar__links img,
     .sidebar__header h2 {
         display: none;
     }
 
-    .sidebar__links-a,
-    .sidebar__links-b {
+    .sidebar__links {
         width: 50vw;
         padding: 10px 15px 15px 10px;
         position: absolute;
         background-color: cornflowerblue;
         font-size: 1.5rem;
+        border-bottom-left-radius: 10px;
+        top: 90px;
+        left: 47.7vw;
        
         gap: 10px;
         grid-column: 1; 
         text-align: end;   
-    }
-
-    .sidebar__links-a {
-        top: 90px;
-        left: 47.7vw;
-    }
-
-    .sidebar__links-b {
-        grid-row: 3;
-        top: 222px;
-        left: 47.7vw;
-        border-bottom-left-radius: 10px;
     }
 
     /* Header styling for mobile */
@@ -468,12 +456,15 @@ button:hover {
         display: none;
     }
 
-    .sidebar__links-a,
-    .sidebar__links-b {
+    .sidebar__links {
         display: grid;
         grid-template-rows: repeat(auto-fit, min-content);
         gap: 20px;
         padding-left: 5px;
+    }
+
+    .sidebar__links a:nth-of-type(7) {
+        margin-top: 30px;
     }
 
     .sidebar a {
